# simple_sequence_ocaml

./: README.md  dune-project  sequence.opam  simple_sequence.opam
lib/: dune  sequence.ml  simple_sequence.ml  simple_sequence.mli
test/: dune  sequence.ml  simple_sequence.ml
